<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_gray"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:id="@+id/w_ll_old"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="65dp"
            android:gravity="center"
            android:text="@string/w_old_password"
            android:layout_marginLeft="10dp"
            android:background="@drawable/w_note_title_color"
            android:id="@+id/w_tv_old"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/w_et_old"
            android:layout_width="match_parent"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/w_note_content_color"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:hint="@string/w_old_hit"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="75dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="65dp"
            android:gravity="center"
            android:text="@string/w_new_password"
            android:layout_marginLeft="10dp"
            android:id="@+id/w_tv_new"
            android:textSize="16sp"
            android:background="@drawable/w_note_title_color" />

        <EditText
            android:id="@+id/w_et_new"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:password="true"
            android:background="@drawable/w_note_content_color"
            android:hint="@string/w_new_hit"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="135dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="65dp"
            android:gravity="center"
            android:text="@string/w_confirm_password"
            android:layout_marginLeft="10dp"
            android:id="@+id/w_tv_confirm"
            android:textSize="16sp"
            android:background="@drawable/w_note_title_color" />

        <EditText
            android:id="@+id/w_et_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/w_note_content_color"
            android:hint="@string/w_confirm_hit"
            android:password="true"
            android:textSize="16sp"/>

    </RelativeLayout>

</RelativeLayout>