<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sning.mtio.Activities.LoginActivity"
    android:background="@drawable/bg_grandient"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/z_launch"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/whut"
        />

    <!-- 用户名-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/z_input_name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/z_input_user_id" />
    </android.support.design.widget.TextInputLayout>


    <!-- 密码 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/z_input_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/z_input_password"/>
    </android.support.design.widget.TextInputLayout>

    <!--登陆-->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/z_btn_launch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:background="@color/z_btnLoginBg"
        android:text="@string/z_launch"
        android:textSize="16sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <!--注册-->
        <TextView
            android:id="@+id/z_tv_link_signup"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/z_goto_signup"
            android:gravity="center|right"
            android:textSize="16sp"/>

        <!--分割线-->
        <TextView
            android:id="@+id/z_tv_split_signup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/z_split_login"
            android:gravity="center"
            android:textSize="16sp"/>

        <!--找回密码-->
        <TextView
            android:id="@+id/z_tv_reset_password"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/z_reset_password"
            android:gravity="center|left"
            android:textSize="16sp"/>


    </LinearLayout>




</LinearLayout>
