<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sning.mtio.Activities.LoginActivity"
    android:background="@drawable/bg_grandient"
    android:orientation="vertical"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/z_iv_back_sign_up"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@mipmap/z_sign_up_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/z_signup"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/whut"
        />


    <!--学号-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText android:id="@+id/z_input_id_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/z_input_user_id" />
    </android.support.design.widget.TextInputLayout>


    <!-- 用户名-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText android:id="@+id/z_input_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/z_input_user_name" />
    </android.support.design.widget.TextInputLayout>


    <!-- 密码 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/z_input_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/z_input_password"/>
    </android.support.design.widget.TextInputLayout>


    <!--确认密码 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/z_confirm_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/z_confirm_password"/>
    </android.support.design.widget.TextInputLayout>

    <!--提交-->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/z_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:text="@string/z_confirm_signup"
        android:background="@color/z_btnLoginBg"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />




</LinearLayout>
